--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang-"en">
   <head>
+     <title>Non-profit donations Project</title>
   </head>
   <body>
-    Hello World!
+    <div id="app"></div>
+    <script src="/bundles/bundle.js"></script>
   </body>
 </html>
