--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang-"en">
   <head>
      <title>Non-profit donations Project</title>
+     <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
