--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang-"en">
   <head>
-     <title>Non-profit donations Project</title>
-     <link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
-  </head>
+    <title>Non-profit donations Project</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
   <body>
     <div id="app"></div>
     <script src="/bundles/bundle.js"></script>
