--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang-"en">
   <head>
     <title>Non-profit donations Project</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,900" rel="stylesheet">
   <body>
     <div id="app"></div>
     <script src="/bundles/bundle.js"></script>
