--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,14 @@
 <html lang-"en">
   <head>
     <title>Non-profit donations Project</title>
+    <script src="http://localhost/3000/socket.io/socket.io.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,900" rel="stylesheet">
+    
   <body>
     <div id="app"></div>
+    <script> 
+      var socket = io('http://localhost/3000');
+    </script> 
     <script src="/bundles/bundle.js"></script>
   </body>
 </html>
