--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <body>
     <div id="app"></div>
     <script> 
-      var socket = io('http://localhost/3000');
+      const socket = io('http://localhost/3000');
     </script> 
     <script src="/bundles/bundle.js"></script>
   </body>
