Change project into organizations

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang-"en">
   <head>
-    <title>Non-profit donations Project</title>
+    <title>Non-profit donations Organization</title>
     <!--<script src="http://localhost/3000/socket.io/socket.io.js"></script>-->
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,900" rel="stylesheet">
     
